testcases/error-cases/string-interpolation-error-01/error.txt
error[E0015]: unterminated template string
 --> testcases\error-cases\string-interpolation-error-01\input.canon:3:1
  |
1 | val name = "Test"
2 | val message = `Hello, ${name}!
3 | 
  | ^
  |
  = note: expected template string end, template string content, '${', or template interpolation
  = note: template strings must be closed with a backtick
  = help: add a closing backtick (`) to end your template string